Fixing padding for main image on mobile

--- a/index.css
+++ b/index.css
@@ -71,6 +71,7 @@
     align-items: center;
     justify-content: center;
     color: var(--text-desaturated-blue);
+    min-height: 100svh;
     min-height: 100vh;
     padding-top: 4rem;
   }
@@ -101,7 +102,7 @@
     text-align: center;
     font-size: 2rem;
     font-weight: var(--fw-700);
-    padding-block: 1rem;
+    /* padding-block: 1rem; */
     padding-top: 6rem;
   }
 
